--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -53,7 +53,7 @@ jobs:
       # Dependency Scan
       # =====================
       - name: OWASP Dependency Check
-        run: ./gradlew dependencyCheckAnalyze
+        run: ./gradlew dependencyCheckAnalyze --info
         env:
           NVD_API_KEY: ${{ secrets.NVD_API_KEY }}
 
