--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -79,6 +79,7 @@ jobs:
       # DAST - OWASP ZAP
       # =====================
       - name: Run OWASP ZAP Scan
-        uses: zaproxy/action-full-scan@v0.10.0
+        uses: zaproxy/action-full-scan@v0.12.0
         with:
           target: 'http://localhost:8080'
+          artifact_name: 'zap-report' 
