--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -74,6 +74,7 @@ jobs:
         run: |
           ./gradlew bootRun &
           sleep 40
+          curl -I http://localhost:8080/hello?name=test
 
       # =====================
       # DAST - OWASP ZAP
@@ -82,4 +83,6 @@ jobs:
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           target: 'http://localhost:8080'
+          fail_action: true
+          cmd_options: '-a'
           artifact_name: 'zap-report' 
