--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -77,12 +77,21 @@ jobs:
           curl -I http://localhost:8080/hello?name=test
 
       # =====================
-      # DAST - OWASP ZAP
+      # DAST - NUCLEI
       # =====================
-      - name: Run OWASP ZAP Scan
-        uses: zaproxy/action-full-scan@v0.12.0
-        with:
-          target: 'http://localhost:8080'
-          fail_action: true
-          cmd_options: '-a'
-          artifact_name: 'zap-report' 
+      - name: Install Nuclei
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          wget https://github.com/projectdiscovery/nuclei/releases/latest/download/nuclei-linux-amd64.zip
+          unzip nuclei-linux-amd64.zip
+          sudo mv nuclei /usr/local/bin/
+
+      - name: Update Nuclei Templates
+        run: nuclei -update-templates
+
+      - name: Run Nuclei Scan
+        run: |
+          nuclei -u http://localhost:8080 \
+            -severity critical,high \
+            -exit-code 1
