--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -77,31 +77,17 @@ jobs:
           curl -I http://localhost:8080/hello?name=test
 
       # =====================
-      # DAST - NUCLEI
+      # DAST - SOOS
       # =====================
-      - name: Install Nuclei
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y golang-go
-          go install github.com/projectdiscovery/nuclei/v3/cmd/nuclei@latest
-          echo "$HOME/go/bin" >> $GITHUB_PATH
-
-      - name: Update Templates
-        run: nuclei -update-templates
-
-      - name: Run Nuclei Scan
-        run: |
-          nuclei -u http://localhost:8080 \
-            --severity critical,high \
-            -json -o nuclei-report.json
-
-          if [ -s nuclei-report.json ]; then
-            echo "High/Critical vulnerabilities found!"
-            cat nuclei-report.json
-            exit 1
-          else
-            echo "No High/Critical vulnerabilities found."
-          fi
+      - name: Run SOOS DAST Scan
+        uses: soos-io/soos-dast-github-action@v2
+        with:
+          api_key: ${{ secrets.API_KEY }}
+          client_id: ${{ secrets.CLIENT_ID }}
+          project_name: "SpringBoot Demo"
+          target_url: "http://localhost:8080"
+          scan_mode: "Baseline"
+          severity: "High,Critical"
 
 
 
