--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -75,15 +75,21 @@ jobs:
           ./gradlew bootRun &
           sleep 40
           curl -I http://localhost:8080/hello?name=test
-      # Expose app
-      - name: Setup ngrok
-        uses: ngrok/ngrok-action@v1
-        with:
-          authtoken: ${{ secrets.NGROK_AUTH_TOKEN }}
+      - name: Install ngrok
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y unzip
+          wget https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-linux-amd64.zip
+          unzip ngrok-v3-stable-linux-amd64.zip
+          sudo mv ngrok /usr/local/bin/
+
+      - name: Configure ngrok
+        run: ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
 
       - name: Start tunnel
         run: |
-          ngrok http 8080 &
+          ngrok http 8080 > /dev/null &
           sleep 10
 
       - name: Get public URL
