--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -110,7 +110,7 @@ jobs:
           api_key: ${{ secrets.API_KEY }}
           client_id: ${{ secrets.CLIENT_ID }}
           project_name: "SpringBoot Demo"
-          target_url: http://host.docker.internal:8080
+          target_url: ${{ steps.ngrok.outputs.url }}
           scan_mode: "Baseline"
           severity: "High,Critical"
 
