--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -113,7 +113,7 @@ jobs:
           project_name: "SpringBoot Demo"
           target_url: ${{ steps.ngrok.outputs.url }}
           scan_mode: baseline
-          on_failure: fail_on_any_vulnerability
+          on_failure: fail_the_build
 
 
 
